@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: env.test,v 1.10 1999/08/27 21:45:17 jenn Exp $
+# RCS: @(#) $Id: env.test,v 1.11 1999/09/21 06:37:26 hobbs Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -78,7 +78,7 @@ puts $f {
 	lrem names ComSpec
 	lrem names ""
     }	
-    foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH PURE_PROG_NAME DISPLAY SHLIB_PATH } {
+    foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH LIBPATH PURE_PROG_NAME DISPLAY SHLIB_PATH } {
 	lrem names $name
     }
     foreach p $names {
@@ -107,7 +107,7 @@ foreach name [array names env] {
 # Added the following lines so that child tcltest can actually find its
 # library if the initial tcltest is run from a non-standard place.
 # ('saved' env vars)
-foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH DISPLAY SHLIB_PATH} {
+foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH LIBPATH DISPLAY SHLIB_PATH} {
   if {[info exists env2($name)]} {
      set env($name) $env2($name);
   }
